plugins {
	id 'java'
    id 'jacoco'
	id 'org.springframework.boot' version '3.3.5'
	id 'io.spring.dependency-management' version '1.1.6'
}

bootJar{
    mainClass = 'co.com.ancas.Main'
}

allprojects {
	repositories {
		mavenLocal()
		mavenCentral()
	}
}



subprojects {
	apply plugin: 'java'
    apply plugin: 'java-library'
	apply plugin: 'org.springframework.boot'
	apply plugin: 'io.spring.dependency-management'

	group = 'co.com.ancas'
	version = '0.0.1-SNAPSHOT'

	compileJava{
		sourceCompatibility = '21'
		targetCompatibility = '21'
	}
	repositories {
		mavenLocal()
		mavenCentral()
	}

	dependencies {
		implementation "org.springframework.boot:spring-boot-starter-security:${springVersion}"
		implementation "org.springframework.boot:spring-boot-starter-web:${springVersion}"
		compileOnly "org.projectlombok:lombok:${lombokVersion}"
		annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
		testImplementation "org.springframework.boot:spring-boot-starter-test:${springVersion}"
		testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
		implementation group: 'org.thymeleaf', name: 'thymeleaf', version: '3.1.2.RELEASE'
		implementation "org.springframework.boot:spring-boot-starter-mail:${springVersion}"
		implementation "org.springframework.boot:spring-boot-starter-thymeleaf:${springVersion}"
		implementation "org.springframework.boot:spring-boot-starter-data-jpa:${springVersion}"

		implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.12.5'
		runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.12.5'
		runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.12.5'
		implementation group: 'io.lettuce', name: 'lettuce-core', version: '6.3.2.RELEASE'

	}

	sourceSets {
		main{
			java {
				srcDirs = ['src/main/java']
			}
			resources {
				srcDirs = ['src/main/resources']
			}
		}
		test {
			java {
				srcDirs = ['src/test/java']
			}
			resources {
				srcDirs = ['src/test/resources']
			}
		}
	}

	test{
		useJUnitPlatform()
	}

}

